# bsb-brian

./: README.md  pyproject.toml
bsb_brian/: __init__.py  adapter.py  cell.py  connection.py  device.py  simulation.py
tests/: test_sim.py
tests/data/: test.json
